♻️ Add setup maven to action

--- a/action.yml
+++ b/action.yml
@@ -16,11 +16,14 @@ runs:
       with:
         java-version: '11'
         distribution: 'temurin'
-    - run: sudo apt install maven
-      shell: bash
+    - name: Setup Maven Action
+      uses: s4u/setup-maven-action@
+      with:
+          java-version: 11
+          maven-version: '3.8.1'
     - run: curl -Ls https://sh.jbang.dev | bash -s - app setup 
       shell: bash
-    - run: ~/.jbang/bin/jbang --repos 'github=https://maven.pkg.github.com/chains-project/maven-lockfile' --repos 'mavencentral' io.github.chains-project:maven-lockfile-github-action:1.0.0
+    - run: ~/.jbang/bin/jbang --repos 'github=https://maven.pkg.github.com/chains-project' io.github.chains-project:maven-lockfile-github-action:1.0.0
       shell: bash
       env:
         JSON_INPUTS: ${{ toJSON(inputs) }} 
