--- a/.github/workflows/release-github-action.yml
+++ b/.github/workflows/release-github-action.yml
@@ -18,25 +18,8 @@ jobs:
           java-version: '11'
           distribution: 'temurin'
       - name: Build with Maven
-        run: cd github_action  && mvn --batch-mode -Dquarkus.package.type=uber-jar -Dquarkus.package.add-runner-suffix=false --update-snapshots clean package deploy || true
+        run: cd github_action  && mvn --batch-mode -Dquarkus.package.type=uber-jar  --update-snapshots clean package deploy || true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-
-
-  check-lockfile:
-        runs-on: ubuntu-latest
-        needs: build-and-publish
-        steps:
-        - uses: actions/checkout@v3
-        - name: Set up JDK 11
-          uses: actions/setup-java@v3
-          with:
-            java-version: '11'
-            distribution: 'temurin'
-        - name: run maven-lockfile
-          uses: chains-project/maven-lockfile@main
-          with:
-            github-token: ${{ secrets.GITHUB_TOKEN }}
 
 
