--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>maven-lockfile-parent</artifactId>
   <version>1.0.0</version>
   <packaging>pom</packaging>
-  <name>maven-lockfile</name>
+  <name>maven-lockfile-parent</name>
   <description>Integrity Maven Plugin</description>
   <url>https://github.com/chains-project/maven-lockfile</url>
   <inceptionYear>2023</inceptionYear>
@@ -26,6 +26,7 @@
     <module>maven_plugin</module>
     <module>github_action</module>
   </modules>
+
   <scm>
     <connection>scm:git:https://github.com/chains-project/maven-lockfile</connection>
     <developerConnection>scm:git:https://github.com/chains-project/maven-lockfile.git</developerConnection>
