--- a/.github/workflows/jreleaser.yml
+++ b/.github/workflows/jreleaser.yml
@@ -73,11 +73,11 @@ jobs:
         run: mvn --no-transfer-progress --batch-mode versions:set -DnewVersion=$NEXT_VERSION -DprocessAllModules
       - name: SED io.github.chains-project:maven-lockfile:${{ env.CURRENT_VERSION }} in java files with io.github.chains-project:maven-lockfile:${{ env.NEXT_VERSION }}
         run: |
-          find . -name "*.java" | xargs sed -i "s/io.github.chains-project:maven-lockfile:${{ env.CURRENT_VERSION }}/io.github.chains-project:maven-lockfile:${{ env.NEXT_VERSION }}/g"`
-          find . -name "action.yml" | xargs sed -i "s/io.github.chains-project:maven-lockfile:${{ env.CURRENT_VERSION }}/io.github.chains-project:maven-lockfile:${{ env.NEXT_VERSION }}/g"`
+          find . -name "*.java" | xargs sed -i "s/io.github.chains-project:maven-lockfile:${{ env.CURRENT_VERSION }}/io.github.chains-project:maven-lockfile:${{ env.NEXT_VERSION }}/g"
+          find . -name "action.yml" | xargs sed -i "s/io.github.chains-project:maven-lockfile:${{ env.CURRENT_VERSION }}/io.github.chains-project:maven-lockfile:${{ env.NEXT_VERSION }}/g"
       - name: Set in action.yml io.github.chains-project:maven-lockfile-github-action:${{ env.CURRENT_VERSION }} with io.github.chains-project:maven-lockfile-github-action:${{ env.NEXT_VERSION }} without snapshot
         run: |
-          find . -name "action.yml" | xargs sed -i "s/io.github.chains-project:maven-lockfile-github-action:${{ env.CURRENT_VERSION }}/io.github.chains-project:maven-lockfile-github-action:${{ env.NEXT_VERSION_WITHOUT_SNAPSHOT }}/g"`
+          find . -name "action.yml" | xargs sed -i "s/io.github.chains-project:maven-lockfile-github-action:${{ env.CURRENT_VERSION }}/io.github.chains-project:maven-lockfile-github-action:${{ env.NEXT_VERSION_WITHOUT_SNAPSHOT }}/g"
       - name: Commit & Push changes
         uses: actions-js/push@master
         with:
