--- a/.github/workflows/jreleaser.yml
+++ b/.github/workflows/jreleaser.yml
@@ -65,6 +65,10 @@ jobs:
           JRELEASER_GPG_SECRET_KEY: ${{ secrets.JRELEASER_GPG_SECRET_KEY }}
           JRELEASER_NEXUS2_MAVEN_CENTRAL_USERNAME: ${{ secrets.JRELEASER_NEXUS2_MAVEN_CENTRAL_USERNAME }}
           JRELEASER_NEXUS2_MAVEN_CENTRAL_PASSWORD: ${{ secrets.JRELEASER_NEXUS2_MAVEN_CENTRAL_PASSWORD }}
+      - name: Append changelog from out/jreleaser/CHANGELOG.md to CHANGELOG.md with version as header
+        run: |
+          echo "## ${{ env.NEXT_VERSION }}" >> CHANGELOG.md
+          cat out/jreleaser/CHANGELOG.md >> CHANGELOG.md
       - name : Set next version (patch of release version) with -SNAPSHOT suffix
         run: |
          echo "NEXT_VERSION=$(semver next patch $NEXT_VERSION)-SNAPSHOT" >> $GITHUB_ENV
@@ -78,6 +82,7 @@ jobs:
       - name: Set in action.yml io.github.chains-project:maven-lockfile-github-action:${{ env.CURRENT_VERSION }} with io.github.chains-project:maven-lockfile-github-action:${{ env.NEXT_VERSION }} without snapshot
         run: |
           find . -name "action.yml" | xargs sed -i "s/io.github.chains-project:maven-lockfile-github-action:${{ env.CURRENT_VERSION }}/io.github.chains-project:maven-lockfile-github-action:${{ env.NEXT_VERSION_WITHOUT_SNAPSHOT }}/g"
+
       - name: Commit & Push changes
         uses: actions-js/push@master
         with:
