👷 Fix path in CI script

--- a/.github/workflows/jreleaser.yml
+++ b/.github/workflows/jreleaser.yml
@@ -68,7 +68,7 @@ jobs:
       - name: Append changelog from out/jreleaser/CHANGELOG.md to CHANGELOG.md with version as header
         run: |
           echo "## ${{ env.NEXT_VERSION }}" >> CHANGELOG.md
-          cat out/jreleaser/CHANGELOG.md >> CHANGELOG.md
+          cat out/jreleaser/release/CHANGELOG.md >> CHANGELOG.md
       - name : Set next version (patch of release version) with -SNAPSHOT suffix
         run: |
          echo "NEXT_VERSION=$(semver next patch $NEXT_VERSION)-SNAPSHOT" >> $GITHUB_ENV
