💄 Improve style of changelog

--- a/.github/workflows/jreleaser.yml
+++ b/.github/workflows/jreleaser.yml
@@ -67,7 +67,7 @@ jobs:
           JRELEASER_NEXUS2_MAVEN_CENTRAL_PASSWORD: ${{ secrets.JRELEASER_NEXUS2_MAVEN_CENTRAL_PASSWORD }}
       - name: Append changelog from out/jreleaser/CHANGELOG.md to CHANGELOG.md with version as header
         run: |
-          echo "## ${{ env.NEXT_VERSION }}" >> CHANGELOG.md
+          echo "# ${{ env.NEXT_VERSION }}" >> CHANGELOG.md
           cat out/jreleaser/release/CHANGELOG.md >> CHANGELOG.md
       - name : Set next version (patch of release version) with -SNAPSHOT suffix
         run: |
