--- a/action.yml
+++ b/action.yml
@@ -14,6 +14,7 @@ runs:
       uses: actions/checkout@v3
       with:
           ref: ${{ github.event.pull_request.head.ref }}
+          fetch-depth: 0
     - name: Set up JDK 11
       uses: actions/setup-java@v3
       with:
