--- a/action.yml
+++ b/action.yml
@@ -10,25 +10,31 @@ inputs:
 runs:
   using: "composite" 
   steps:
-    - name: Checkout
-      uses: actions/checkout@v3
-      with:
-          ref: ${{ github.event.pull_request.head.ref }}
-          fetch-depth: 0
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'temurin'
     - name: Setup Maven Action
       uses: s4u/setup-maven-action@v1.7.0
       with:
           java-version: 11
           maven-version: '3.8.1'
+          checkout-fetch-depth: 0
     - run: curl -Ls https://sh.jbang.dev | bash -s - app setup 
       shell: bash
-    - run: ~/.jbang/bin/jbang --repos 'mavencentral' io.github.chains-project:maven-lockfile-github-action:1.0.8
+    - name: Get all changed pom.xml file(s) or any file in the static folder excluding the docs folder
+      id: changed-files
+      uses: tj-actions/changed-files@v35
+      with:
+        files: |
+              **/pom.xml
+    - run: ~/.jbang/bin/jbang --repos 'mavencentral' io.github.chains-project:maven-lockfile-github-action:1.0.8-SNAPSHOT
       shell: bash
+      if: steps.changed-files.outputs.any_changed == 'true'
       env:
+        action: "generate"
         JSON_INPUTS: ${{ toJSON(inputs) }} 
-        GITHUB_TOKEN: ${{ inputs.github-token }} 
+        GITHUB_TOKEN: ${{ inputs.github-token }}
+    - run: ~/.jbang/bin/jbang --repos 'mavencentral' io.github.chains-project:maven-lockfile-github-action:1.0.8-SNAPSHOT
+      shell: bash
+      if: steps.changed-files.outputs.any_changed == 'false'
+      env:
+        action: "validate"
+        JSON_INPUTS: ${{ toJSON(inputs) }} 
+        GITHUB_TOKEN: ${{ inputs.github-token }}
