--- a/action.yml
+++ b/action.yml
@@ -24,14 +24,14 @@ runs:
       with:
         files: |
               **/pom.xml
-    - run: ~/.jbang/bin/jbang --repos 'mavencentral' io.github.chains-project:maven-lockfile-github-action:1.0.9-SNAPSHOT
+    - run: ~/.jbang/bin/jbang --repos 'mavencentral' io.github.chains-project:maven-lockfile-github-action:1.0.9
       shell: bash
       if: steps.changed-files.outputs.any_changed == 'true'
       env:
         action: "generate"
         JSON_INPUTS: ${{ toJSON(inputs) }} 
         GITHUB_TOKEN: ${{ inputs.github-token }}
-    - run: ~/.jbang/bin/jbang --repos 'mavencentral' io.github.chains-project:maven-lockfile-github-action:1.0.9-SNAPSHOT
+    - run: ~/.jbang/bin/jbang --repos 'mavencentral' io.github.chains-project:maven-lockfile-github-action:1.0.9
       shell: bash
       if: steps.changed-files.outputs.any_changed == 'false'
       env:
