--- a/.github/workflows/code-qualitiy.yml
+++ b/.github/workflows/code-qualitiy.yml
@@ -5,7 +5,7 @@ on:
 
 
 jobs:
-  build:
+  maven-quality:
     runs-on: ubuntu-latest
 
     steps:
@@ -21,6 +21,8 @@ jobs:
         run: mvn --batch-mode --update-snapshots clean package
       - name: Run doc check
         run: mvn org.apache.maven.plugins:maven-javadoc-plugin:3.5.0:jar
+      - name: Run spotless check
+        run: mvn spotless:check
   qodana:
     runs-on: ubuntu-latest
     steps:
