--- a/.github/workflows/lockfiletest.yml
+++ b/.github/workflows/lockfiletest.yml
@@ -5,8 +5,12 @@ jobs:
     runs-on: ubuntu-latest
     name: smoke test against different repos
     steps:
-    - name: checkout
-      uses: actions/checkout@v3
+    - name: Setup Maven Action
+      uses: s4u/setup-maven-action@v1.7.0
+      with:
+          java-version: 11
+          maven-version: '3.8.1'
+          checkout-fetch-depth: 0
     - uses: actions/cache@v3
       with:
         path: /root/.jbang
