--- a/.github/workflows/lockfiletest.yml
+++ b/.github/workflows/lockfiletest.yml
@@ -5,6 +5,9 @@ jobs:
     runs-on: ubuntu-latest
     name: smoke test against different repos
     steps:
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
     - name: Set up Maven
       uses: stCarolas/setup-maven@v4.5
       with:
