--- a/.github/workflows/lockfiletest.yml
+++ b/.github/workflows/lockfiletest.yml
@@ -12,8 +12,8 @@ jobs:
       uses: stCarolas/setup-maven@v4.5
       with:
         maven-version: 3.8.2
-    - name: Set which mvn result as env.MVN_PATH_BIN
-      run: echo "MVN_PATH_BIN=$(which mvn)" >> $GITHUB_ENV
+    - name: Maven Wrapper
+      run: mvn wrapper:wrapper
     - uses: actions/cache@v3
       with:
         path: /root/.jbang
@@ -27,5 +27,3 @@ jobs:
       env:
         JBANG_REPO: /root/.jbang/repository
         GITHUB_TOKEN: $
-        WORKING_DIRECTORY: ${{ env.working-directory }}
-        MVN_PATH_BIN: ${{ env.MVN_PATH_BIN }}
