--- a/action.yml
+++ b/action.yml
@@ -12,43 +12,18 @@ inputs:
     required: false
     default: 'true'
 runs:
-  using: "composite" 
+  using: "composite"
   steps:
-    - uses: actions/checkout@v3
+    - name: checkout repository
+      uses: actions/checkout@v3
       with:
         fetch-depth: 0
-    - name: Set up Maven
-      uses: stCarolas/setup-maven@v4.5
-      with:
-        maven-version: 3.8.2
-    - name: Maven Wrapper
-      run: mvn wrapper:wrapper
+    - id: install-jbang
+      run: curl -Ls https://sh.jbang.dev | bash -s - app setup
       shell: bash
-    - run: curl -Ls https://sh.jbang.dev | bash -s - app setup 
+    - id: action
+      run: ~/.jbang/bin/jbang --repos 'github=https://maven.pkg.github.com/chains-project/maven-lockfile/' --repos 'mavencentral' io.github.chains-project:maven-lockfile-github-action:1.0.13-SNAPSHOT
       shell: bash
-    - name: Get all changed pom.xml file(s) or any file in the static folder excluding the docs folder
-      id: changed-files
-      uses: tj-actions/changed-files@v35
-      with:
-        files: |
-              **/pom.xml
-    - run: ~/.jbang/bin/jbang --repos 'mavencentral' io.github.chains-project:maven-lockfile-github-action:1.0.13
-      shell: bash
-      if: steps.changed-files.outputs.any_changed == 'true'
       env:
-        action: "generate"
-        JSON_INPUTS: ${{ toJSON(inputs) }} 
+        JSON_INPUTS: ${{ toJSON(inputs) }}
         GITHUB_TOKEN: ${{ inputs.github-token }}
-    - run: ~/.jbang/bin/jbang --repos 'mavencentral' io.github.chains-project:maven-lockfile-github-action:1.0.13
-      shell: bash
-      if: steps.changed-files.outputs.any_changed == 'false'
-      env:
-        action: "validate"
-        JSON_INPUTS: ${{ toJSON(inputs) }} 
-        GITHUB_TOKEN: ${{ inputs.github-token }}
-    - name: Commit lockfile
-      if: inputs.commit-lockfile == 'true' && steps.changed-files.outputs.any_changed == 'true'
-      uses: EndBug/add-and-commit@v9
-      with:
-          default_author: github_actions
-          add: "**/lockfile.json"
