--- a/action.yml
+++ b/action.yml
@@ -27,3 +27,4 @@ runs:
       env:
         JSON_INPUTS: ${{ toJSON(inputs) }}
         GITHUB_TOKEN: ${{ inputs.github-token }}
+        action: "generate"
