--- a/action.yml
+++ b/action.yml
@@ -29,15 +29,23 @@ runs:
     - id: install-jbang
       run: curl -Ls https://sh.jbang.dev | bash -s - app setup
       shell: bash
-    - name: Get all changed pom.xml file(s) or any file in the static folder excluding the docs folder
+    - name: Get all changed pom.xml file(s)
       id: changed-files
       uses: tj-actions/changed-files@v35
       with:
         files: |
               **/pom.xml
+    - name: Set pom-changed input to false
+      if: steps.changed-files.outputs.any_changed == 'false'
+      run: echo "::set-input name=pom-changed::false"
+      shell: bash
+
     - name: Set pom-changed input to true
       if: steps.changed-files.outputs.any_changed == 'true'
       run: echo "::set-input name=pom-changed::true"
+      shell: bash
+    - name: print pom-changed
+      run: echo ${{ inputs.pom-changed }}
       shell: bash
     - id: action
       run: ~/.jbang/bin/jbang --repos 'github=https://maven.pkg.github.com/chains-project/maven-lockfile/' --repos 'mavencentral' io.github.chains-project:maven-lockfile-github-action:1.0.13-SNAPSHOT
