--- a/.github/workflows/publish-action-artifact.yml
+++ b/.github/workflows/publish-action-artifact.yml
@@ -45,6 +45,6 @@ jobs:
             cache: maven
 
         - name: Run my action
-          uses: chains-project/maven-lockfile@dev
+          uses: chains-project/maven-lockfile@5c4eb1f90e30279a111999a57d4e08fec56e1ec7
           with:
             github-token: ${{ secrets.GITHUB_TOKEN }}
