--- a/action.yml
+++ b/action.yml
@@ -30,7 +30,7 @@ runs:
       run: curl -Ls https://sh.jbang.dev | bash -s - app setup
       shell: bash
     - name: Get changed files
-      id: changed-files
+      id: changed-files2
       uses: tj-actions/changed-files@v35
         
         # To compare changes between the current commit and the last pushed remote commit set `since_last_remote_commit: true`. e.g
@@ -40,7 +40,7 @@ runs:
     - name: List all changed files
       shell: bash
       run: |
-          for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
+          for file in ${{ steps.changed-files2.outputs.all_changed_files }}; do
             echo "$file was changed"
           done
     - name: Get all changed pom.xml file(s)
