--- a/.github/workflows/publish-action-artifact.yml
+++ b/.github/workflows/publish-action-artifact.yml
@@ -30,15 +30,21 @@ jobs:
           cd github_action && mvn -B clean deploy -Dquarkus.package.type=uber-jar --update-snapshots -Dquarkus.package.add-runner-suffix=false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  test-action:
+      runs-on: ubuntu-latest
+      needs: build-and-push-action
+      steps:
+        - name: Checkout repository
+          uses: actions/checkout@v3
 
-  test-lockfile:
-    runs-on: ubuntu-latest
-    needs: build-and-push-action
-    permissions:
-      contents: read
-      packages: read
-    steps:
-      - name: lockfile
-        uses: chains-project/maven-lockfile@6b990343818099986bba46bfa7c38aabc981859d
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+        - name: Set up JDK 11
+          uses: actions/setup-java@v3
+          with:
+            java-version: 11
+            distribution: temurin
+            cache: maven
+
+        - name: Run my action
+          uses: chains-project/maven-lockfile@dev
+          with:
+            github-token: ${{ secrets.GITHUB_TOKEN }}
