--- a/github_action/pom.xml
+++ b/github_action/pom.xml
@@ -9,7 +9,7 @@
   </parent>
   <groupId>io.github.chains-project</groupId>
   <artifactId>maven-lockfile-github-action</artifactId>
-  <version>1.0.13-SNAPSHOT</version>
+  <version>999-SNAPSHOT</version>
   <name>maven-lockfile-github-action-</name>
   <distributionManagement>
     <repository>
@@ -19,15 +19,15 @@
     </repository>
   </distributionManagement>
   <properties>
-    <compiler-plugin.version>3.11.0</compiler-plugin.version>
+    <compiler-plugin.version>3.10.1</compiler-plugin.version>
     <maven.compiler.release>11</maven.compiler.release>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
     <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
-    <quarkus.platform.version>2.16.5.Final</quarkus.platform.version>
+    <quarkus.platform.version>2.16.1.Final</quarkus.platform.version>
     <skipITs>true</skipITs>
-    <surefire-plugin.version>3.0.0</surefire-plugin.version>
+    <surefire-plugin.version>3.0.0-M8</surefire-plugin.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -38,30 +38,17 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
-      <dependency>
-        <groupId>io.quarkiverse.githubaction</groupId>
-        <artifactId>quarkus-github-action</artifactId>
-        <version>1.0.2</version>
-      </dependency>
-      <dependency>
-        <groupId>org.buildobjects</groupId>
-        <artifactId>jproc</artifactId>
-        <version>2.8.2</version>
-      </dependency>
     </dependencies>
   </dependencyManagement>
   <dependencies>
     <dependency>
-      <groupId>org.buildobjects</groupId>
-      <artifactId>jproc</artifactId>
+      <groupId>io.quarkiverse.githubaction</groupId>
+      <artifactId>quarkus-github-action</artifactId>
+      <version>1.0.1</version>
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-arc</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>io.quarkiverse.githubaction</groupId>
-      <artifactId>quarkus-github-action</artifactId>
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
@@ -69,16 +56,9 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>io.quarkiverse.githubaction</groupId>
-      <artifactId>quarkus-github-action-testing</artifactId>
-      <version>2.0.0.Alpha2</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.assertj</groupId>
-      <artifactId>assertj-core</artifactId>
-      <version>3.24.2</version>
-      <scope>test</scope>
+      <groupId>org.buildobjects</groupId>
+      <artifactId>jproc</artifactId>
+      <version>2.8.2</version>
     </dependency>
   </dependencies>
   <build>
@@ -150,6 +130,67 @@
         <skipITs>false</skipITs>
         <quarkus.package.type>native</quarkus.package.type>
       </properties>
+    </profile>
+    <profile>
+      <id>flatten</id>
+      <activation>
+        <property>
+          <name>quarkus.package.type</name>
+          <value>uber-jar</value>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>flatten-maven-plugin</artifactId>
+            <version>1.3.0</version>
+            <configuration>
+              <pomElements>
+                <description>keep</description>
+                <url>keep</url>
+                <developers>keep</developers>
+                <scm>keep</scm>
+                <issueManagement>keep</issueManagement>
+                <repositories>remove</repositories>
+                <dependencies>remove</dependencies>
+                <build>remove</build>
+              </pomElements>
+            </configuration>
+            <executions>
+              <execution>
+                <id>flatten</id>
+                <goals>
+                  <goal>flatten</goal>
+                </goals>
+                <phase>process-resources</phase>
+              </execution>
+              <execution>
+                <id>flatten.clean</id>
+                <goals>
+                  <goal>clean</goal>
+                </goals>
+                <phase>clean</phase>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>github-action</id>
+      <activation>
+        <property>
+          <name>env.GITHUB_REPOSITORY</name>
+        </property>
+      </activation>
+      <distributionManagement>
+        <repository>
+          <id>github</id>
+          <name>GitHub Repository Apache Maven Packages</name>
+          <url>https://maven.pkg.github.com/${env.GITHUB_REPOSITORY}</url>
+        </repository>
+      </distributionManagement>
     </profile>
     <profile>
       <id>publication</id>
